# alsa-utils

./: Makefile.am  configure.ac  gitcompile
topology/: Makefile.am  pre-process-object.c  pre-processor.c  topology.h
topology/nhlt/: nhlt-processor.c  nhlt-processor.h  nhlt.h
topology/nhlt/intel/: dmic-nhlt.c  dmic-nhlt.h  intel-nhlt.h  ssp-nhlt.c  ssp-nhlt.h
topology/nhlt/intel/dmic/: dmic-debug.c  dmic-intel.h  dmic-internal.h  dmic-process.c  dmic-process.h
topology/nhlt/intel/ssp/: ssp-debug.c  ssp-intel.h  ssp-internal.h  ssp-process.c  ssp-process.h
